Feature/helenee 59, 63 (#70)
* test: [Comment] 댓글 엔티티에 대한 테스트 작성 완료

* refactor: [CommentControllerTest] 사용하지 않는 dependency의 import 제거

* refactor: [Comments] 사용하지 않는 import 제거

* refactor: [PostTest] 사용하지 않는 import 제거

* refactor: [Follow] 오버라이딩하는 hashCode 메서드가 Objects 객체에 있는 hash 메서드를 사용하도록 변경

* test: [Follow] 팔로우 엔티티에 대한 테스트 작성

* test: [FollowedList] 테스트 작성

* test: [FollowerList] 테스트 작성

* fix: [Follow] 팔로우 엔티티의 ID가 자동 할당될 때 이제 IDENTITY 전략을 사용함

* refactor: [userRepositoryTest] import 방식 수정

* refactor: 팔로우 기능 리팩토링

* refactor: 팔로우 API의 응답 type이 dto가 아닌 코드에 대한 수정

* rebase 'develop'

* doc: 팔로우 API 작성

* test: [userService] 리팩토링한 함수들에 대한 테스트 작성

* refactor: [userServiceTest] isFollowExist 및 followCheck 함수에 대한 테스트 코드 수정

* refactor: [userServiceTest] 코드 스멜 제거

* fix: [UserServiceTest] isFollowExist 파라미터 쌍 조합의 모든 경우를 커버하도록 코드 변경